--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "hello-rust"
 version = "0.1.0"
-authors = ["Humboldt123 <nonemunhsiv@gmail.com>"]
+authors = ["Humboldt123 <skrub@skrub.dev>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
